--- a/Docker/app/Dockerfile
+++ b/Docker/app/Dockerfile
@@ -1,69 +1,50 @@
-FROM php:7.1-apache
+FROM php:7.3-apache-stretch
 
-RUN apt-get update
-RUN apt-get install -y --no-install-recommends \
-    sudo \
-    git \
-    libxml2-dev \
-    unzip \
-    wget \
-    zlib1g-dev \
-    iproute2 \
-    libsqlite3-dev \
-    libpq-dev \
-    libicu-dev \
-    gnupg2
-RUN wget -qO- https://deb.nodesource.com/setup_10.x | bash -
-RUN apt-get install -y --no-install-recommends nodejs
+ENV APACHE_DOCUMENT_ROOT /var/www/html
 
-RUN apt-get update \
-    && apt-get install -y \
-    vim
+RUN echo "deb http://cdn.debian.net/debian/ stretch main contrib non-free" > /etc/apt/sources.list.d/mirror.jp.list
+RUN echo "deb http://cdn.debian.net/debian/ stretch-updates main contrib" >> /etc/apt/sources.list.d/mirror.jp.list
 
-RUN apt-get update \
-    && apt-get install -y \
-    locales \
-    locales-all \
-    && locale-gen ja_JP.UTF-8 && update-locale \
-    && echo "export LANG=ja_JP.UTF-8" >> ~/.bashrc
+RUN /bin/rm /etc/apt/sources.list
 
-RUN docker-php-ext-install \
-    intl \
-    mbstring \
-    pdo \
-    pdo_sqlite \
-    pdo_mysql \
-    pdo_pgsql \
-    soap \
-    xml \
-    zip
+RUN apt-get update && apt-get install -y \
+        curl apt-utils apt-transport-https debconf-utils gcc build-essential \
+        zlib1g-dev git gnupg2 unzip libfreetype6-dev libjpeg62-turbo-dev \
+        libpng-dev libzip-dev libicu-dev vim git ssl-cert \
+        && docker-php-ext-install -j$(nproc) zip gd mysqli pdo_mysql opcache intl \
+        && rm -rf /var/lib/apt/lists/*
 
-# RUN pecl install xdebug
-RUN pecl install apcu
-RUN docker-php-ext-enable \
-    apcu \
-    opcache \
-    && a2enmod rewrite \
-    && apt-get clean \
-    && rm -rf /tmp/*
-RUN curl -sS https://getcomposer.org/installer \
-    |  php -- \
-    --filename=composer \
-    --install-dir=/usr/local/bin \
-    # composerの高速化
-    && COMPOSER_ALLOW_SUPERUSER=1 composer global require --optimize-autoloader "hirak/prestissimo" \
-    && chown www-data /var/www \
-    && chmod g+s /var/www/html
+RUN apt-get update && apt-get install -y libpq-dev \
+        && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
+        && docker-php-ext-install -j$(nproc) pgsql pdo_pgsql \
+        && rm -rf /var/lib/apt/lists/*
 
-COPY ./entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
+RUN apt-get update && apt-get install -y locales \
+        && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
+        && locale-gen
 
-ENTRYPOINT ["/entrypoint.sh"]
+RUN pecl install apcu && echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apc.ini
 
-COPY ./php.ini /usr/local/etc/php/
-COPY ./.vimrc /root/
+RUN if [ ! -d ${APACHE_DOCUMENT_ROOT} ]; then mkdir -p ${APACHE_DOCUMENT_ROOT} ; fi
+RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
+RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
 
-RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
-EXPOSE 80
+RUN a2enmod rewrite
+RUN a2enmod headers
 
-CMD ["apache2-foreground"]
+# Enable SSL
+RUN a2enmod ssl
+RUN ln -s /etc/apache2/sites-available/default-ssl.conf /etc/apache2/sites-enabled/default-ssl.conf
+EXPOSE 443
+
+# Use the default production configuration
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+# Override with custom configuration settings
+COPY dockerbuild/php.ini $PHP_INI_DIR/conf.d/
+
+RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/bin/composer
+
+COPY dockerbuild/.vimrc /root/
+
+USER root
+
